Code/syntax.output
State 58 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier FunDec error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty
   31         | Stmt error StmtList

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | IF LP Exp error RP Stmt ELSE Stmt
   40     | WHILE LP Exp error RP Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | Exp LP error RP
   68    | Exp LB error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 20 23 28 31 38 39 40 44 67 68
    INT <node> (258) 19 65
    FLOAT <node> (259) 66
    ID <node> (260) 15 17 18 21 22 60 61 63 64
    SEMI <node> (261) 4 5 7 8 32 34 38 43 44
    COMMA <node> (262) 10 24 46 69
    ASSIGNOP <node> (263) 48 49
    PLUS <node> (264) 53
    MINUS <node> (265) 54 58
    DIV <node> (266) 56
    STAR <node> (267) 55
    AND <node> (268) 50
    OR <node> (269) 51
    DOT <node> (270) 63
    NOT <node> (271) 59
    RELOP <node> (272) 52
    TYPE <node> (273) 11
    STRUCT <node> (274) 13 14
    RETURN <node> (275) 34
    IF <node> (276) 35 36 39
    ELSE <node> (277) 36 39
    WHILE <node> (278) 37 40
    LP <node> (279) 21 22 35 36 37 39 40 57 60 61 67
    RP <node> (280) 21 22 23 35 36 37 39 40 57 60 61 67
    LB <node> (281) 19 62 68
    RB <node> (282) 19 20 62 68
    LC <node> (283) 13 27
    RC <node> (284) 13 27 28


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program <node> (31)
        on left: 1
        on right: 0
    ExtDefList <node> (32)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (33)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (34)
        on left: 9 10
        on right: 4 10
    Specifier <node> (35)
        on left: 11 12
        on right: 4 5 6 8 26 43 44
    StructSpecifier <node> (36)
        on left: 13 14
        on right: 12
    OptTag <node> (37)
        on left: 15 16
        on right: 13
    Tag <node> (38)
        on left: 17
        on right: 14
    VarDec <node> (39)
        on left: 18 19 20
        on right: 9 10 19 26 47 48
    FunDec <node> (40)
        on left: 21 22 23
        on right: 6 8
    VarList <node> (41)
        on left: 24 25
        on right: 21 24
    ParamDec <node> (42)
        on left: 26
        on right: 24 25
    CompSt <node> (43)
        on left: 27 28
        on right: 6 33
    StmtList <node> (44)
        on left: 29 30 31
        on right: 27 29 31
    Stmt <node> (45)
        on left: 32 33 34 35 36 37 38 39 40
        on right: 29 31 35 36 37 39 40
    DefList <node> (46)
        on left: 41 42
        on right: 13 27 41
    Def <node> (47)
        on left: 43 44
        on right: 41
    DecList <node> (48)
        on left: 45 46
        on right: 43 46
    Dec <node> (49)
        on left: 47 48
        on right: 45 46
    Exp <node> (50)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 32 34 35 36 37 39 40 48 49 50 51 52 53 54 55 56 57 58 59 62 63 67 68 69 70
    Args <node> (51)
        on left: 69 70
        on right: 60 69


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . FunDec error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   20 VarDec: error . RB
   23 FunDec: error . RP

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    8       | Specifier FunDec . error SEMI

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 23

   20 VarDec: error RB .

    $default  reduce using rule 20 (VarDec)


State 24

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 34

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 38
    ID     shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 27

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


State 28

    8 ExtDef: Specifier FunDec error . SEMI
   28 CompSt: error . RC

    SEMI  shift, and go to state 42
    RC    shift, and go to state 43


State 29

   27 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 33

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 33


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   26 ParamDec: Specifier . VarDec

    error  shift, and go to state 38
    ID     shift, and go to state 39

    VarDec  go to state 51


State 36

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 25 (VarList)


State 38

   20 VarDec: error . RB

    RB  shift, and go to state 23


State 39

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 40

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 42

    8 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 43

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 44

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 45

   20 VarDec: error . RB
   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69
    RB    shift, and go to state 23


State 46

   19 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 27

    $default  reduce using rule 47 (Dec)


State 47

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 48

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 45 (DecList)


State 49

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 50

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 51

   19 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 26 (ParamDec)


State 52

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 37


State 54

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 55

   28 CompSt: error . RC
   38 Stmt: error . SEMI

    SEMI  shift, and go to state 74
    RC    shift, and go to state 43


State 56

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 57

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 58

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 75

    LP        [reduce using rule 64 (Exp)]
    $default  reduce using rule 64 (Exp)


State 59

   58 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64

    Exp  go to state 76


State 60

   59 Exp: NOT . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64

    Exp  go to state 77


State 61

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64

    Exp  go to state 78


State 62

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP Exp error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 63

   37 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . LP Exp error RP Stmt

    LP  shift, and go to state 80


State 64

   57 Exp: LP . Exp RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64

    Exp  go to state 81


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 67

   29 StmtList: Stmt . StmtList
   31         | Stmt . error StmtList

    error   shift, and go to state 83
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 84
    Stmt      go to state 67
    Exp       go to state 68


State 68

   32 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LP error RP
   68    | Exp . LB error RB

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    DIV       shift, and go to state 89
    STAR      shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RELOP     shift, and go to state 94
    LP        shift, and go to state 95
    LB        shift, and go to state 96


State 69

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


State 70

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64

    Exp  go to state 97


State 71

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 72

   46 DecList: Dec COMMA . DecList

    error  shift, and go to state 38
    ID     shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 98
    Dec      go to state 48


State 73

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 74

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 75

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 64
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LP error RP
   68    | Exp . LB error RB

    DIV   shift, and go to state 89
    STAR  shift, and go to state 90
    DOT   shift, and go to state 93
    LP    shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 58 (Exp)


State 77

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LP error RP
   68    | Exp . LB error RB

    DOT  shift, and go to state 93
    LP   shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 59 (Exp)


State 78

   34 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LP error RP
   68    | Exp . LB error RB
